# Optimization-based-frequentist-confidence-intervals-for-functionals-cpp

./: CMakeLists.txt  FindGMP.cmake  main.cpp  main_swp.cpp
distribution/bin_second_largest_values/: CMakeLists.txt  bin_second_largest_values.cpp  bin_second_largest_values.h  example.cpp
distribution/final_filter/: CMakeLists.txt  example.cpp  final_filter.cpp  final_filter.h
distribution/find_closest_indices/: CMakeLists.txt  example.cpp  find_closest_indices.cpp  find_closest_indices.h
distribution/quantile_1_minus_alpha/: CMakeLists.txt  example.cpp  quantile_1_minus_alpha.cpp  quantile_1_minus_alpha.h
optimization/compute_optimal_probabilities/: CMakeLists.txt  compute_optimal_probabilities.cpp  compute_optimal_probabilities.h  example.cpp
optimization/log_likelihood_grid/: CMakeLists.txt  example.cpp  log_likelihood_grid.cpp  log_likelihood_grid.h
optimization/maximize_product/: CMakeLists.txt  example.cpp  maximize_product.cpp  maximize_product.h
optimization/maximize_product_grid/: CMakeLists.txt  example.cpp  maximize_product_grid.cpp  maximize_product_grid.h
optimization/maximize_product_list/: CMakeLists.txt  example.cpp  maximize_product_list.cpp  maximize_product_list.h
utils/FactorialList/: CMakeLists.txt  FactorialList.cpp  FactorialList.h  example.cpp
utils/FilterVectors/: CMakeLists.txt  FilterVectors.cpp  FilterVectors.h  example.cpp
utils/Multinomial/: CMakeLists.txt  Multinomial.cpp  Multinomial.h  example.cpp
utils/MultinomialCoefficient/: CMakeLists.txt  MultinomialCoefficient.cpp  MultinomialCoefficient.h  example.cpp
utils/discrete_simplex/: CMakeLists.txt  discrete_simplex.cpp  discrete_simplex.h  example.cpp
utils/enlarge_matrix/: CMakeLists.txt  enlarge_matrix.cpp  enlarge_matrix.h  example.cpp
utils/normalize_vectors/: CMakeLists.txt  example.cpp  normalize_vectors.cpp  normalize_vectors.h
utils/normalized_sample_space/: CMakeLists.txt  example.cpp  normalized_sample_space.cpp  normalized_sample_space.h
utils/sample_space/: CMakeLists.txt  example.cpp  sample_space.cpp  sample_space.h
utils/unique_vector_indices/: CMakeLists.txt  example.cpp  unique_vector_indices.cpp  unique_vector_indices.h
utils/unique_vectors/: CMakeLists.txt  example.cpp  unique_vectors.cpp  unique_vectors.h
